Actualización taller de problemas 3
Se agregan cambios en el código de la segunda asignación

--- a/Codigos/Calibracion_Inteligente/Calibracion_Inteligente.ipynb
+++ b/Codigos/Calibracion_Inteligente/Calibracion_Inteligente.ipynb
@@ -213,7 +213,7 @@
    "source": [
     "#Show dates where both normal and estaciones have data at the same time\n",
     "print(normal[normal[\"Date\"].isin(estaciones[\"Date\"])])\n",
-    "print(estaciones[estaciones[\"Date\"].isin(normal[\"Date\"])])\n",
+    "print(estaciones[estaciones[\"Date\"].isin(normal[\"Date\"])])Markdown\n",
     "print(normal[normal[\"Date\"].isin(estaciones[\"Date\"])].shape)\n",
     "print(estaciones[estaciones[\"Date\"].isin(normal[\"Date\"])].shape)\n"
    ]
