--- a/Asign_Topicos/readme
+++ b/Asign_Topicos/readme
@@ -1,1 +1,3 @@
-Desarrollo de la asignación: Fluidos no pascalianos y estructura estelar relativista.
+## Desarrollo de la asignación: Fluidos no pascalianos y estructura estelar relativista.
+
+Link a la presentación en Google Slides: https://docs.google.com/presentation/d/1ycaljOHVQRMDb3v_GT7k8MxolrIXQsnd/edit?usp=sharing&ouid=103954272895875717548&rtpof=true&sd=true
